--- a/java-script/design.css
+++ b/java-script/design.css
@@ -8,7 +8,7 @@
     border: 2px solid black;
     width: 100%;
     height: 100vh;
-    background: url("java-script/img-2.jpg") center center;
+    background: url("images/img-1.jpg") center center;
     background-position: center;
     background-size: cover;
     background-repeat: no-repeat;
